0.03
 - Regen README file from doc.
 - Update copyright years.

0.02 2022-09-12T23:51:29+02:00
 - Fix minimal dependency of Tags::HTML.
 - Improve CSS for button.
 - Rename example to better name.

0.01 2022-07-07T22:34:28+02:00
 - First version.