@@ -1,7 +1,6 @@
 TODO
 ====
 2. Az bude Tags::HTML::Login::Access, tak pridat do see also sekce.
-4. Image to doc.
 5. Another example to doc with explicit CSS.
 6.
 
@@ -12,3 +11,6 @@ OK [20211002] skim
 
 3. Better CSS.
 OK [20220912] skim
+
+4. Image to doc.
+OK [20230423] skim
